# mc-installer-v2

./: .env  .gitignore  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml  tauri-test.yml  test.yml
public/: bootstrap.html  login_mojang.html
src/: global.d.ts  index.css  index.sass  index.tsx  setupTests.ts
src-tauri/: .gitignore  Cargo.toml  args.txt  tauri.conf.json
src-tauri/mc-laucher-lib-rs/: .gitignore  Cargo.toml
src-tauri/mc-laucher-lib-rs/src/: client.rs  command.rs  fabric.rs  forge.rs  json.rs  lib.rs  login.rs  mod_utiles.rs  natives.rs  optifine.rs  runtime.rs  utils.rs  vanilla.rs
src-tauri/src/: app.rs  main.rs
src-tauri/src/commands/: game.rs  importer.rs  login.rs  minecraft.rs  mod.rs  play.rs  state.rs
src-tauri/src/files/: user_cache.rs
src-tauri/src/minecraft/: command.rs  exceptions.rs  fabric.rs  forge.rs  install.rs  iris.rs  microsoft_account.rs  mod.rs  modloader_utils.rs  mods.rs  mojang_account.rs  natives.rs  optifine.rs  runtime.rs  structs_runtimes.rs  utils.rs
src/components/: Account.tsx  App.tsx  AppFooter.tsx  AppHeader.tsx  Downloads.tsx  ErrorMessage.tsx  Footer.tsx  Header.tsx  Home.sass  Home.tsx  LinkedButton.tsx  ListButton.tsx  ListContainer.tsx  ListGroup.tsx  Loader.tsx  PickFile.tsx  Settings.tsx  TabPanel.tsx  TextListGroup.tsx
src/core/: AppInit.ts  Database.ts  DownloadManager.ts  ProfileManager.ts  accounts.ts  cmds.ts  db.ts  downloads.ts  github.ts
src/lib/: commands.ts  db.ts  profile.ts
src/models/: CreateModpack.tsx  CreateProfileDialog.tsx  ProfileSettingsDialog.tsx  RunningDialog.tsx  SeleteProfile.tsx  SetupDialog.tsx  index.tsx
src/pages/: Downloads.tsx  Home.tsx  Mod.tsx  ModPacks.tsx  ModView.tsx  Modpack.tsx  ModpackView.tsx  Mods.tsx  ProfileView.tsx  Profiles.tsx  (+1 more)
wellknowns/: loaders.yml  metadata.yml  modpacks.yml  mods.yml  mods_download.yml
(+57 files in other folders)
