[package]
name = "mc_rust_lancher"
version = "0.1.0"
description = "Minecraft launcher in rust"
authors = [ "VisualSource" ]
license = "MIT"
repository = ""
default-run = "mc_rust_lancher"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["cli", "dialog-all", "global-shortcut-all", "http-all", "notification-all", "os-all", "shell-open", "window-all"] }
app_dirs2 = "*"
ureq = { version = "*", features = [ "json" ] }
rust-crypto = "0.2.36"
os-version = "0.2.0"
zip = "0.5.13"
regex = "1.5.4"
lzma-rs = "0.2.0"
serde_yaml = "0.8.23"
serde-xml-rs = "0.5.1"
uuid = { version = "0.8.2", features = [ "v4" ] }
urlparse = "0.7.3"
log = "0.4.14"
simplelog = "0.11.2"
url = "2.2.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
