[package]
name = "mc_rust_lancher"
version = "0.1.0"
description = "Minecraft launcher in rust"
authors = [ "VisualSource" ]
license = "MIT"
repository = ""
default-run = "mc_rust_lancher"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_yaml = "0.8.23"
serde_json = "1.0.78"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["cli", "dialog-all", "global-shortcut-all", "http-all", "notification-all", "os-all", "shell-open", "window-all"] }
app_dirs2 = "*"
log = "0.4.14"
simplelog = "0.11.2"
jsonwebtoken = "7.2.0"
mc-laucher-lib-rs = { path = "mc-laucher-lib-rs" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
